crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_native_fallback_defaults_312.snap
---
source: crates/typepython_lowering/src/tests.rs
expression: lowered.module.python_source
---
from typing_extensions import TypeVar
from typing import TypeAlias
T = TypeVar("T", default="int")
Pair: TypeAlias = tuple[T, T]

def first(value: T = 1) -> T:
    return value
