crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_nested_unsafe_in_function.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
def update():
    if True:  # tpy:unsafe
        x = eval('1')
