crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_overload_def.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
from typing import overload
@overload
def parse(x: str) -> int: ...
