crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_passthrough_python_source.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
def hello(name: str) -> str:
    return f"Hello, {name}"

class User:
    name: str
