crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_sealed_class.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
class Expr:  # tpy:sealed
    ...
