crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_type_param_with_bounds_constraints_defaults.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
from typing_extensions import TypeVar
from typing import TypeAlias
T = TypeVar("T", "str", "bytes", default="str")
Pair: TypeAlias = tuple[T, T]
