crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_typeddict_keyword_stripping.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
from typing import TypedDict

class User(TypedDict, total=False):
    name: str
