crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_unsafe_block.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
if True:
    x = eval('1')
